argocd/snutt-dev/snutt-theme-market/snutt-theme-market.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snutt-theme-market
  labels:
    app: snutt-theme-market
  namespace: snutt-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snutt-theme-market
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: snutt-theme-market
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - image: yny.ocir.io/ax1dvc8vmenm/snutt-dev/snutt-theme-market
        name: snutt-theme-market
        resources:
          requests:
            cpu: 25m
            memory: 128Mi
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/health-check
            port: 3000
        readinessProbe:
          httpGet:
            path: /api/health-check
            port: 3000
        startupProbe:
          httpGet:
            path: /api/health-check
            port: 3000
          failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  namespace: snutt-dev
  name: snutt-theme-market
spec:
  type: ClusterIP
  selector:
    app: snutt-theme-market
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: snutt-dev
  name: snutt-theme-market
spec:
  gateways:
  - istio-ingress/waffle-ingressgateway
  - mesh
  hosts:
  - snutt-theme-market-dev.wafflestudio.com
  http:
  - timeout: 10s
    route:
    - destination:
        host: snutt-theme-market
